Fix GitHub Pages deployment

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "InkMaster Tattoo Studio",
   "short_name": "InkMaster",
-  "start_url": "https://meanchengleang.github.io/inkmaster/",
+  "start_url": "https://inkmaster.tattoo/",
   "description": "Custom Tattoos & Professional Artists",
   "display": "standalone",
   "background_color": "#000000",
