--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -9,23 +9,24 @@ permissions:
   id-token: write
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - name: Build
-        run: |
-          mkdir _site
-          cp -r * _site/ || true
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: _site
-      - name: Deploy
+          path: .
+          
+  deploy:
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
