--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -12,17 +12,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: false
+      - uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: .
-          
   deploy:
     needs: build
     runs-on: ubuntu-latest
