Fix artifact upload in workflow

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,26 +4,34 @@ on:
     branches: [ main ]
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
-      - name: Upload artifact
+        with:
+          source: ./
+          destination: ./_site
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./_site
+          path: "_site/"
+          
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
