--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -19,6 +19,6 @@ jobs:
       - uses: actions/configure-pages@v3
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: . # Replace with your site’s build folder if applicable, e.g., 'dist'
+          path: . # Change to your site’s output folder if not the root, e.g., 'dist'
       - id: deployment
         uses: actions/deploy-pages@v3
