--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "InkMaster Tattoo Studio",
   "short_name": "InkMaster",
-  "start_url": "https://meanchengleang.github.io/inkmaster/",
+  "start_url": "/inkmaster/",
   "description": "Custom Tattoos & Professional Artists",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "images/icon-192.png",
+      "src": "/inkmaster/images/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/icon-512.png",
+      "src": "/inkmaster/images/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
