--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -14,14 +14,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup Pages
         uses: actions/configure-pages@v3
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: . # Uploads root directory (index.html, manifest.json, etc.)
+          path: .
 
   deploy:
     needs: build
