Fix workflow and manifest configurations

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -14,8 +14,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
+
+      # Optional: Debug what’s being uploaded
+      - name: List files (debug)
+        run: ls -la
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
